// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed component renders correctly while loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly while loading with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 0.5,
            "width": 750,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Image
            source={
              Object {
                "uri": "InstagramIcon",
              }
            }
            style={
              Object {
                "height": 30,
                "position": "absolute",
                "right": 9,
                "top": 9,
                "width": 30,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "height": 750,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                4278190080,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 75,
                "opacity": 0.8,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 0.5,
            "width": 750,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Image
            source={
              Object {
                "uri": "InstagramIcon",
              }
            }
            style={
              Object {
                "height": 30,
                "position": "absolute",
                "right": 9,
                "top": 9,
                "width": 30,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "height": 750,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                4278190080,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 75,
                "opacity": 0.8,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 0.5,
            "width": 750,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Image
            source={
              Object {
                "uri": "InstagramIcon",
              }
            }
            style={
              Object {
                "height": 30,
                "position": "absolute",
                "right": 9,
                "top": 9,
                "width": 30,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "height": 750,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                4278190080,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 75,
                "opacity": 0.8,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#696A6B",
            "borderBottomWidth": 0.5,
            "width": 750,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "backgroundColor": "transparent",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 750,
                "zIndex": 2,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#7ED321",
                  "fontSize": 14,
                  "marginBottom": -2,
                }
              }
            >
              Carlos Pinto
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DEDEDE",
                  "fontSize": 10,
                }
              }
            >
              @
              cpinto7
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "bottom": 0,
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "left": 10,
                  "position": "absolute",
                }
              }
            >
              Invalid date
            </Text>
          </View>
          <Image
            source={
              Object {
                "uri": "InstagramIcon",
              }
            }
            style={
              Object {
                "height": 30,
                "position": "absolute",
                "right": 9,
                "top": 9,
                "width": 30,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "height": 750,
              "width": 750,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "url",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
          <BVLinearGradient
            colors={
              Array [
                4278190080,
                0,
              ]
            }
            end={undefined}
            locations={null}
            start={undefined}
            style={
              Object {
                "height": 75,
                "opacity": 0.8,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Feed component renders correctly without events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#323232",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;
